--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,14 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<body>
+    <div id="root"></div>
+</body>
+<script type="module">
+    const myDiv = document.createElement('div')
+    myDiv.textContent = 'Hello world 🦘'
+    myDiv.className = 'container'
+    const rootElement = document.getElementById('root')
+    rootElement.append(myDiv)    
+</script>
