--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -10,20 +10,42 @@
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   -->
 
-  <script type="module">
-    const rootElement = document.getElementById('root')
+  <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
 
-    // You're going to re-implement this code using React!
-    // 💣 So go ahead and delete this implementation (or comment it out for now)
-    // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
-    // This is similar to ReactDOM.createRoot().render()
-    rootElement.append(element)
+  <script type="module">
+    // const rootElement = document.getElementById('root')
+
+    // // You're going to re-implement this code using React!
+    // // 💣 So go ahead and delete this implementation (or comment it out for now)
+    // // These three lines are similar to React.createElement
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // // This is similar to ReactDOM.createRoot().render()
+    // rootElement.append(element)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
     // 💰 The example in the markdown file should be a good hint for you.
+    const rootElement = document.getElementById('root')
+    const root = ReactDOM.createRoot(rootElement)
+
+    // const spanHelloProps = {children: 'Hello'}
+    // const spanHello = React.createElement('span', spanHelloProps)
+
+    // const spanWorldProps = {children: 'World'}
+    // const spanWorld = React.createElement('span', spanWorldProps)
+
+    const helloWorld = ["Hello", "World"].map(word => {
+      const elementProps = {children: word}
+      return React.createElement('span', elementProps)
+    })
+
+    const containerProps = {id: 'container', children: helloWorld}
+    const containerElement = React.createElement('div', containerProps)
+    root.render(containerElement)
+    
+    
   </script>
 </body>
