jsx, props and children (lesson 3)

--- a/src/exercise/03.html
+++ b/src/exercise/03.html
@@ -11,15 +11,27 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   -->
 
-  <script type="module">
+  <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script type="text/babel">
     // 🐨 on the script tag above, change `type="module"`
     // to `type="text/babel"` so babel will compile this code for the browser to run.
 
     // 🐨 re-implement this using JSX!
-    const element = React.createElement('div', {
-      className: 'container',
-      children: 'Hello World',
-    })
+    // const element = React.createElement('div', {
+    //   className: 'container',
+    //   children: 'Hello World',
+    // })
+
+    // const containerClassName = 'container'
+    // const containerChildren = 'Hello world 💂🏻‍♀️'
+    const className = 'container'
+    const children = 'Hello world 💂🏻‍♀️'
+    const props = {children, className}
+
+    const spreadPropsElement = <div {...props} />
+    // console.log(props)
+
+    // const element = <div className={containerClassName}>{containerChildren}</div>
 
     // 💰 there are a few subtle differences between JSX and HTML. One such
     // difference is how you apply a class to an element in JSX is by using
@@ -27,6 +39,29 @@
     // 📜 You can learn the differences between JSX and HTML syntax from the React docs here:
     // https://reactjs.org/docs/dom-elements.html#differences-in-attributes
 
-    ReactDOM.createRoot(document.getElementById('root')).render(element)
+    // Other playing around from example here https://reactjs.org/docs/jsx-in-depth.html#spread-attributes
+
+    const Button = props => {
+    const { kind, ...other } = props;
+    console.log('kind', kind) // kind is available as its own variable because we pulled it out using destructuring
+    console.log('props', props) // All props passed in at the App level are stored and still accessible in props
+    console.log('other', other) // All other props except 'kind' are stored in a variable called other (from the destructuring above)
+    const className = kind === "primary" ? "PrimaryButton" : "SecondaryButton";
+    return <button className={className} {...other} />;
+    };
+
+  const App = () => {
+    return (
+      <div>
+        <Button kind="primary" test="yo" style={{color: "red"}} onClick={() => console.log("clicked!")}>
+          Hello World!
+        </Button>
+      </div>
+    );
+  };
+
+
+    ReactDOM.createRoot(document.getElementById('root')).render(<App/>)
   </script>
+
 </body>
